--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  user-select: 
+  background-color: #2C2C2C;
+  color: white;
+  user-select: none;
 }
 
 .main {
@@ -15,11 +17,19 @@ body {
 .left h3 {
   text-align: center;
   font-size: 30px;
-  margin-bottom: 
+  margin-bottom: 50px;
 }
 
 .donut-image {
   width: 300px;
+}
+
+.donut-img {
+  width: 50px;
+}
+
+.upload-img {
+  width: 50px;
 }
 
 .donut-image:hover {
@@ -32,6 +42,19 @@ body {
   transform: scale(1.02)
 }
 
+.upgrade {
+  display: flex;
+  align-items: center;
+  width: 330px;
+  height: 60px;
+  border: 4px solid white;
+}
+
 .uprade-img {
   width: 55px;
+}
+
+.donut-img {
+  width: 20px;
+  height: 20px;
 }
