--- a/style.css
+++ b/style.css
@@ -45,9 +45,15 @@ body {
 .upgrade {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 330px;
   height: 60px;
   border: 4px solid white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  height: 60px;
+  width: 330px;
+  position: relative;
 }
 
 .uprade-img {
@@ -57,4 +63,33 @@ body {
 .donut-img {
   width: 20px;
   height: 20px;
+}
+
+.mid-section h4 {
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.mid-section p {
+  margin: 0;
+}
+
+.cost-info {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.next-level-info {
+  position: absolute;
+  right: -100px;
+  background-color: rgb(90, 89, 90);
+  height: 80px;
+  width: 100px;
+  text-align: center;
+}
+
+.upgrade:hover .next-level-info {
+  
 }
