--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 body {
     display: grid;
     place-items: center;
-    height: 100vh;
+    height: 10vh;
     margin: 0;
     padding: 0;
-    background-color: #2C2C2C;
-    color: rgb(255, 255, 255);
-    user-select: none;
 }
 
 .main {
@@ -25,47 +22,11 @@ body {
 }
 
 .donut-image:hover {
-    opacity: 0.9;
+    opacity: 300px;
     cursor: pointer;
 }
 
 .donut-image:active {
     opacity: 0.8;
-    transform: scale(1.02);
-}
-
-.upgrade {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 330px;
-    height: 60px;
-    border: 4px solid white;
-    padding: 10px 20px;
-    border-radius: 5px;
-}
-
-.mid-section h4 {
-    margin: 0;
-    margin-bottom: 20px;
-    font-size: 20px;
-}
-
-.mid-section p {
-    margin: 0;
-}
-
-.upgrade-img {
-    width: 55px;
-}
-
-.donut-img {
-    width: 20px;
-    height: 20px;
-}
-
-.cost-info {
-    display: flex;
-    align-items: center;
-    gap: 5px;
+    transform: scale(1.02)
 }
