--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
     height: 10vh;
     margin: 0;
     padding: 0;
+    background-color: #2C2C2C;
+    color: white;
+    user-select: none;
 }
 
 .main {
@@ -22,11 +25,44 @@ body {
 }
 
 .donut-image:hover {
-    opacity: 300px;
+    opacity: 0.9;
     cursor: pointer;
 }
 
 .donut-image:active {
     opacity: 0.8;
     transform: scale(1.02)
+}
+
+.upgrade {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 330px;
+    height: 60px;
+    border: 4px solid white;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+.mid-section h4 {
+    margin: 0;
+}
+
+.mid-section p {
+    margin: 0;
+}
+
+.upgrade-img {
+    width: 55px;
+}
+
+.donut-img {
+    width: 20px;
+    height: 20px;
+}
+
+.cost-info {
+    display: flex;
+    gap: 5px;
 }
