--- a/style.css
+++ b/style.css
@@ -38,19 +38,18 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 330px;
-    height: 60px;
-    border: 4px solid white;
     padding: 10px 20px;
+    border: 4px solid white;
     border-radius: 5px;
+    height: 60px;
+    width: 330px;
+    position: relative;
+    margin-bottom: 30px;
 }
 
-.mid-section h4 {
-    margin: 0;
-}
-
-.mid-section p {
-    margin: 0;
+.upgrade:hover {
+    opacity: 0.85;
+    cursor: pointer;
 }
 
 .upgrade-img {
@@ -62,7 +61,32 @@ body {
     height: 20px;
 }
 
+.mid-section h4 {
+    margin: 0;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+.mid-section p {
+    margin: 0;
+}
+
 .cost-info {
     display: flex;
+    align-items: center;
     gap: 5px;
+}
+
+.next-level-info {
+    position: absolute;
+    right: -100px;
+    background-color: rgb(90, 89, 90);
+    height: 80px;
+    width: 100px;
+    text-align: center;
+    display: none;
+}
+
+.upgrade:hover .next-level-info {
+    display: block;
 }
