--- a/style.css
+++ b/style.css
@@ -34,14 +34,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 20px;
+    padding: 10px, 20px;
     border: 4px solid white;
-    border-radius: 5px;
     height: 60px;
     width: 330px;
     position: relative;
     margin-bottom: 30px;
 }
+
 
 .upgrade:hover {
     opacity: 0.85;
