--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* The body will showcase the font-family, the color used for the text and display grid */
 body {
     display: grid;
     place-items: center;
@@ -8,71 +9,127 @@ body {
     color: white;
     user-select: none;
     font-family: "Skranji", serif;
-}
-
-.main {
+  }
+  
+  /* header */
+  h1 {
+    text-align: center;
+  }
+  
+  /* Navigation Bar for other pages*/
+  .topnav {
+    overflow: hidden;
+    background-color: #383434;
+    width: 100%;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* This will be used for the main area for donut clicker*/
+  .main {
     display: flex;
     gap: 200px;
-}
-
-.left h3{
+  }
+  
+  /* This will be used for the left area for donut clicker*/
+  .left {
     text-align: center;
-    font-size: 30px;
-    margin-bottom: 50px;
-}
-
-.burger-image{
-    width: 200px;
-}
-
-.burger-image:hover {
-    opacity: 0.8;
+    font-size: 25px;
+  }
+  
+  .pink-text {
+    font-size: 32px;
+    color: rgb(202, 115, 243);
+    font-weight: 700;
+    text-shadow: 2px 2px 3px rgb(90, 90, 90)
+  }
+  
+  .cost-text {
+    font-size: 18px;
+  }
+  
+  /* This image will be used for the big donut clicker*/
+  .ice-image {
+    width: 500px;
+  }
+  
+  /* This will make a hover effect for the big donut clicker*/
+  .ice-image:hover {
+    opacity: 0.9;
     cursor: pointer;
-}
-
-.upgrade {
+  }
+  
+  .ice-image:active {
+    opacity: 0.8;
+    transform: scale(1.02)
+  }
+  
+  /* This will be used to position the levels*/
+  .upgrade {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px, 20px;
+    padding: 10px 20px;
     border: 4px solid white;
+    border-radius: 5px;
     height: 60px;
     width: 330px;
     position: relative;
     margin-bottom: 30px;
-}
-
-
-.upgrade:hover {
+  }
+  /* This will add a hover effect for the levels */
+  .upgrade:hover {
     opacity: 0.85;
     cursor: pointer;
-}
-
-.upgrade-img {
+  }
+  /* upgrade img will be used for the levels */
+  .upgrade-img {
     width: 55px;
-}
-
-.burger-img {
-    width: 20px;
-    height: 15px;
-}
-.mid-section h4 {
+  }
+  
+  /* This image will be used for the donut img container*/
+  .ice-img-container {
+    position: relative;
+  }
+  
+  /* This image will be right next to the cost */
+  .ice-img {
+    width: 25px;
+    height: 25px;
+  }
+  
+  /* The mid-section */
+  .mid-section h4 {
     margin: 0;
     margin-bottom: 20px;
     font-size: 20px;
-}
-
-.mid-section p {
+  }
+  
+  .mid-section p {
     margin: 0;
-}
-
-.cost-info {
+  }
+  
+  /* Cost info that is portrayed in the levels */
+  .cost-info {
     display: flex;
     align-items: center;
     gap: 5px;
-}
-
-.next-level-info {
+  }
+  
+  /* Next level info will be used for the box hover effect next to the level*/
+  .next-level-info {
     position: absolute;
     right: -100px;
     background-color: rgb(90, 89, 90);
@@ -80,8 +137,63 @@ body {
     width: 100px;
     text-align: center;
     display: none;
-}
-
-.upgrade:hover .next-level-info {
+  }
+  
+  .upgrade:hover .next-level-info {
     display: block;
-}
+  }
+  
+  /* This will showcase the stats of the donut clicker down below*/
+  .statistics {
+    position: absolute;
+    bottom: 0;
+    width: 400px;
+    padding: 30px;
+    border: 2px white solid;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    left: 50%
+    transform: translate(-50%);
+  }
+  
+  /* This will tell you the GPC & GPS */
+  .texts {
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 22px;
+  }
+  
+  /* This code will show 1's popping up after using the donut clicker*/
+  .fade-up {
+    animation: fade-up 1s;
+  }
+  
+  @keyframes fade-up {
+    0% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    20% {
+      transform: translateY(-5px);
+      opacity: 0.9;
+    }
+    40% {
+      transform: translateY(-13px);
+      opacity: 0.75;
+    }
+    60% {
+      transform: translateY(-25px);
+      opacity: 0.55;
+    }
+    80% {
+      transform: translateY(-42px);
+      opacity: 0.3;
+    }
+    100% {
+      transform: translateY(-65px);
+      opacity: 0;
+    }
+  }
+  
